# PACKAGE_SUPPLYCHAIN_APP

./: .env  .gitignore  README.md  SPEC_METIER_SUPPLYCHAINAPP.md  SUPPLYCHAIN_APP_v1.1.0.spec  SUPPLYCHAIN_APP_v1.2.0.spec  SUPPLYCHAIN_APP_v1.3.0.spec  SUPPLYCHAIN_APP_v1.4.0.spec  SUPPLYCHAIN_APP_v1.5.0.spec  SUPPLYCHAIN_APP_v1.6.0.spec  SUPPLYCHAIN_APP_v1.6.1.spec  SUPPLYCHAIN_APP_v1.6.2.spec  SUPPLYCHAIN_APP_v1.6.spec  SupplyChainApp.spec  SupplyChainApp_NoLLM.spec  main.py  pyproject.toml  run_exe_log.txt  run_supplychainapp.py
.github/: pull_request_template.md
databases/chroma_catalog/: chroma.sqlite3
docs/: presentation_metier_supplychainapp_v1.5.0.html  presentation_metier_supplychainapp_v1.5.0.md
docs/adr/: 0000-template.md  0001-architecture-en-couches.md  0002-assistant-anti-hallucinations-sources.md  0003-distance-technicien-pr.md  0004-application-lifecycle-shutdown.md  0005-admin-menu-password.md  0006-header-navigation-menus.md  0007-separate-css-from-html.md  0008-approved-tech-stack.md
docs/build_specs/: SUPPLYCHAIN_APP_v1.5.0.spec
docs/spec/: SPEC_METIER_SUPPLYCHAINAPP.md
package_pudo_api/: __init__.py  app.py  constants.py  excel_csv_to_dataframe.py
package_pudo_api/data/: pudo_etl.py  pudo_service.py
package_pudo_api/services/: geocoding.py  items_service.py  pudo_service.py
package_pudo_api__old/: __init__.py  constants.py  excel_csv_to_dataframe.py  items.py  miscellaneous_functions.py  my_loguru.py
package_pudo_frontend/: README.md  downloads.html  helios.html  home.html  index.html  items.html  ol_mode_degrade.html  photos.html  statistiques_sorties.html  stock.html  stock_detailed.html  stock_hyper_detaille.html  stock_map.html  stores.html  technician.html  technician_admin.html  technician_assignments.html
package_pudo_frontend__old/: index.html  ol_mode_degrade_v2.html  stock_detailed.html  stock_map.html  technician_assignments.html
scripts/: build_exe.ps1  build_exe_no_llm.ps1
src/: run_exe.py
src/package_pudo/: main.py  (+2 more)
web/: README.md  article_network.html  article_request.html  assistant_rag.html  catalogue_consommables.html  downloads.html  helios.html  home.html  index.html  items.html  photos.html  pudo_directory.html  slides_fonctionnalites_evolutions.html  statistiques_sorties.html  stock_detailed.html  stock_hyper_detaille.html  stock_map.html  stores.html  technician.html  technician_admin.html  technician_assignments.html  treatments.html
(+119 files in other folders)
